fix z-index issue with logo bg

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7209,19 +7209,6 @@ a.text-dark:hover, a.text-dark:focus {
   .container-xl {
     max-width: 1180px !important; } }
 
-main.page-sidebar article {
-  position: relative; }
-  main.page-sidebar article:before {
-    background-image: url("../img/logo-bg.svg");
-    background-size: 511px 511px;
-    content: "";
-    height: 511px;
-    left: -321px;
-    position: absolute;
-    top: 164px;
-    width: 511px;
-    z-index: 0; }
-
 html,
 body {
   font-family: "Open Sans", sans-serif;
@@ -7493,14 +7480,27 @@ main.page-sidebar {
 main aside {
   background-color: #fff;
   min-height: 235px;
-  padding: 25px; }
+  padding: 25px;
+  position: relative;
+  z-index: 1; }
 
 main article {
   background-color: #fff;
-  padding: 50px 50px 75px 50px; }
+  padding: 50px 50px 75px 50px;
+  position: relative; }
   @media (min-width: 992px) {
     main article {
       padding: 50px 50px 125px 50px; } }
+  .page-template-page main article:before {
+    background-image: url("../img/logo-bg.svg");
+    background-size: 511px 511px;
+    content: "";
+    height: 511px;
+    left: -321px;
+    position: absolute;
+    top: 164px;
+    width: 511px;
+    z-index: 0; }
 
 .breadcrumb {
   background: none;
@@ -7549,7 +7549,9 @@ main article {
 .bottom-banner-cta {
   background-color: #414042;
   color: #fff;
-  padding: 55px 0; }
+  padding: 55px 0;
+  position: relative;
+  z-index: 1; }
   .bottom-banner-cta h2 {
     color: #fff;
     font-size: 32px;
@@ -7682,45 +7684,45 @@ main article {
     background-position: top center;
     min-height: 450px; }
 
-.related-cta h2 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 32px;
-  font-weight: 300; }
-
-.related-cta .related-cta-top {
-  padding: 30px 0 15px; }
-  @media (min-width: 992px) {
-    .related-cta .related-cta-top {
-      padding: 15px 0 15px; } }
-
-.related-cta .related-cta-middle {
-  background-color: #5B0047; }
-  .related-cta .related-cta-middle .photo-inner {
-    background-position: top center;
-    background-size: cover;
-    min-height: 300px;
-    position: relative; }
+.related-cta {
+  position: relative;
+  z-index: 1; }
+  .related-cta h2 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 32px;
+    font-weight: 300; }
+  .related-cta .related-cta-top {
+    padding: 30px 0 15px; }
     @media (min-width: 992px) {
-      .related-cta .related-cta-middle .photo-inner {
-        min-height: 220px; } }
-    .related-cta .related-cta-middle .photo-inner .btn {
-      bottom: 20px;
-      left: 20px;
-      position: absolute; }
+      .related-cta .related-cta-top {
+        padding: 15px 0 15px; } }
+  .related-cta .related-cta-middle {
+    background-color: #5B0047; }
+    .related-cta .related-cta-middle .photo-inner {
+      background-position: top center;
+      background-size: cover;
+      min-height: 300px;
+      position: relative; }
       @media (min-width: 992px) {
-        .related-cta .related-cta-middle .photo-inner .btn {
-          display: none; } }
-
-.related-cta .related-cta-bottom {
-  padding: 25px 0; }
-  @media (min-width: 992px) {
-    .related-cta .related-cta-bottom {
-      padding: 25px 0 100px 0; } }
-  .related-cta .related-cta-bottom .btn {
-    display: none;
-    text-align: left; }
+        .related-cta .related-cta-middle .photo-inner {
+          min-height: 220px; } }
+      .related-cta .related-cta-middle .photo-inner .btn {
+        bottom: 20px;
+        left: 20px;
+        position: absolute; }
+        @media (min-width: 992px) {
+          .related-cta .related-cta-middle .photo-inner .btn {
+            display: none; } }
+  .related-cta .related-cta-bottom {
+    padding: 25px 0; }
     @media (min-width: 992px) {
-      .related-cta .related-cta-bottom .btn {
-        display: block;
-        margin: 0 auto;
-        max-width: 80%; } }
+      .related-cta .related-cta-bottom {
+        padding: 25px 0 100px 0; } }
+    .related-cta .related-cta-bottom .btn {
+      display: none;
+      text-align: left; }
+      @media (min-width: 992px) {
+        .related-cta .related-cta-bottom .btn {
+          display: block;
+          margin: 0 auto;
+          max-width: 80%; } }
