--- a/assets/scss/components/_main.scss
+++ b/assets/scss/components/_main.scss
@@ -12,14 +12,31 @@ main {
 		background-color: $brand-white;
 		min-height: 235px;
 		padding: 25px;
+		position: relative;
+		z-index: 1;
 	}
 
 	article {
 		background-color: $brand-white;
 		padding: 50px 50px 75px 50px;
+		position: relative;
 
 		@include media-breakpoint-up(lg) {
 			padding: 50px 50px 125px 50px;
+		}
+
+		.page-template-page & {
+			&:before {
+				background-image: url("../img/logo-bg.svg");
+				background-size: 511px 511px;
+				content: "";
+				height: 511px;
+				left: -321px;
+				position: absolute;
+				top: 164px;
+				width: 511px;
+				z-index: 0;
+			}
 		}
 	}
 }
