--- a/assets/scss/components/_related-cta.scss
+++ b/assets/scss/components/_related-cta.scss
@@ -1,4 +1,6 @@
 .related-cta {
+	position: relative;
+	z-index: 1;
 	h2 {
 		font-family: $montserrat;
 		font-size: 32px;
